--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 I'm awaiting lunch.
 And yet I know the food will be boring.
-Food is Food.
-<h1 style="color:#194D33;"><3</h1>
+<a href="https://google.com">Food is Food.</a>
+<b style="color:#194D33;"><3</b>
