--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 I'm awaiting lunch.
 And yet I know the food will be boring.
 <a href="https://google.com">Food is Food.</a>
-<b style="color:#194D33;"><3</b>
+<h1 style="color:#F806D5;"><3</h1>
