--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<style="color:F44336;">I'm</> awaiting lunch.
+<text style="color:F44336;">I'm</text> awaiting lunch.
 And yet I know the food will be boring.
 <a href="https://google.com">Food is Food.</a>
 <h1 style="color:#F806D5;"><3</h1>
