--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <text style="color:F44336;">I'm</text> <text style="color:#FF9800;">awaiting</text> <text style="color:#FFEB3B;">lunch.</text>
 <text style="color:#8BC34A;">And</text> <text style="color:#4CAF50;">yet</text> <text style="color:#009688;">I</text> <text style="color:#2196F3;">know</text> <text style="color:#3F51B5;">the</text>
 <text style="color:#673AB7;">food</text> <text style="color:#9C27B0;">will</text> <text style="color:#E91E63;">be</text> <text style="color:#F78DA7;">boring.</text>
-<a href="https://i.ibb.co/mRFT4zR/hamgurgr.jpg">Food is Food.</a>
+<a href="/noob/barbara">Food is Food.</a>
 <h1 style="color:#F806D5;"><3</h1>
